--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build":  "npx tailwindcss -i ./index.css -o ./dist/output.css --watch"
+    "build": "npx tailwindcss -i ./index.css -o ./dist/output.css --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "gsap": "^3.12.2",
     "tailwindcss": "^3.3.3"
   }
 }
